分类列表页完成

--- a/less/category.less
+++ b/less/category.less
@@ -1,1 +1,26 @@
 @charset "UTF-8";
+.row{
+  .mui-table-view .mui-navigate-right{
+    font-size: 18rem/50;
+  }
+  .mui-collapse-content li{
+    width: 33.33%;
+    float: left;
+    text-align: center;
+    border-right: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    a{
+      box-sizing: content-box;
+      padding: 5rem/50;
+      display: block;
+      height: 100rem/50;
+      line-height: 100rem/50;
+      font-size: 18rem/50;
+      color: #333;
+    }
+  }
+  .mui-collapse-content ul{
+    border-top: 1px solid #cccccc;
+    border-left:1px solid #cccccc;
+  }
+}
