--- a/css/common.css
+++ b/css/common.css
@@ -70,12 +70,12 @@ html,
 body {
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 .container {
   width: 100%;
   max-width: 750px;
   min-width: 320px;
-  height: 100%;
   margin: 0 auto;
   padding-top: 1rem;
   position: relative;
@@ -83,7 +83,6 @@ body {
 .container .main {
   background-color: #fff;
   width: 100%;
-  height: 100%;
 }
 .container .main .content > .list-title-content {
   height: 0.7rem;
