--- a/less/common.less
+++ b/less/common.less
@@ -9,19 +9,19 @@
 html,body{
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 .container{
   width: 100%;
   max-width: 750px;
   min-width: 320px;
-  height: 100%;
+  //height: 100%;
   margin: 0 auto;
   padding-top: 50rem/50;
   position: relative;
   .main{
     background-color: #fff;
     width: 100%;
-    height: 100%;
     .content > .list-title-content {
       height: 35rem/50;
       background-color: #ff9000;
